[package]
name = "jsonrpsee-types"
version = "0.2.0-alpha.4"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Shared types for jsonrpsee"
edition = "2018"
license = "MIT"

[dependencies]
anyhow = { default-features = false, version = "1.0" }
async-trait = "0.1"
beef = "0.5"
futures = { default-features = false, version = "0.3" }
log = { default-features = false, version = "0.4" }
serde = { default-features = false, features = ["derive"], version = "1.0" }
serde_json = { default-features = false, features = ["raw_value"], version = "1.0" }
smallvec = "1.0"

[features]
default = ["std"]
std = [
    "anyhow/std",
    "futures/std",
    "log/std",
    "serde/std",
    "serde_json/std",
]